# openrepo

./: .env.example  .gitignore  .gitmodules  .windsurfrules  =7.1.0  AGENTS.md  API_ENDPOINTS.md  AUDIT.md  CLAUDE.md  Makefile  OC_ADV_PLAN.md  OPENCLAW_PLAN.md  README.md  openclaw.json  openclaw.json.bak  openclaw.json.bak.1  openclaw.json.bak.3  openclaw.json.bak.4  openclaw.json.vanilla  openclaw_config.db  patch_monitor.py  pyproject.toml  session-ses_3401.md  skillresearch.md  test_metrics.py  test_render_soul.py  update-check.json
.clawhub/: lock.json
.planning/: Configuration and operations# Configurat.md  MILESTONES.md  PHASE_1_PLAN.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md
.serena/: project.yml
.windsurf/: hooks.json
agents/: __init__.py
config/: .env.example  openclaw.json  openclaw.json.example
credentials/: telegram-default-allowFrom.json  telegram-pairing.json
cron/: README.md  cronlog.py  cronwrap.sh  healthcheck.py  jobs.json  manager.py  scheduler.py
delivery-queue/: 7d96a522-7ba3-4619-8163-6cced0f91ae4.json
devices/: paired.json
docker/: Dockerfile.orchestrator
docs/: Federated_Redesign.txt  OpenClaw_Rewrite.txt  SWARM_PLAN.md
identity/: device-auth.json  device.json
logs/: config-audit.jsonl
memory/: memu.sqlite
orchestration/: __init__.py  config.py  config_validator.py  init.py  logging.py  memory_client.py  (+7 more)
(+1706 files in other folders)
